v1.1.5
----------------------------------------------------------------------------------------------------
 * Some attempts at code readability, increased logging level for fallback cert generation that
   was swept under the DEBUG carpet before.

v1.1.4
----------------------------------------------------------------------------------------------------
 * When ACME fails to authenticate your domain, the exact server answer is logged
   as error. This helps to find out the reason for the failed challenge, for example
   when ACME reports a 'Timeout' if it could not reach your server. Implements #70.

v1.1.3
----------------------------------------------------------------------------------------------------
 * Fixed wrong mem pool use for auto-added server names.
 
v1.1.2
----------------------------------------------------------------------------------------------------
 * The first configuration check was skipping parts that are needed, especially for new
   MDs, and crash if mod_ssl calls back "too early". Reverting that change.

v1.1.1
----------------------------------------------------------------------------------------------------
 * Fixed backward compaitbility to '<ManagedDomain' configurations, used in pre v1.1.0 versions
   to continue working. Test case added.
 * added httpd version checks to test cases that make use of 2.5.0 mod_ssl features. Tests now
   run clean against a 2.4.30 installation.

v1.1.0
----------------------------------------------------------------------------------------------------
 * IMPORTANT: name change in configuration directives. The Apache team decided that the current
   names would confuse you, the users, and asked for a change. The old names are still working
   in this version, so you can safely upgrade. 
   They will give warnings in the log and will disappear in the immediate future.
   * ManagedDomain is now MDomain
   * <ManagedDomain> is now <MDomainSet>
 
v1.0.7